# -Agent-

./: .env.example  AI+Robtic.md  Makefile  README.md  Readme_run.md  Tool Calling（工具调用  common.json  example_process.md  pyproject.toml  仓库结构（Monorepo）  具体步骤 + 具体数据  数据层  项目背景
configs/: app.yaml  models.yaml  policies.yaml
configs/prompts/: clinical_note.md  safety_guard.md
configs/schemas/: common.json  m10_eval.json  m1_auth.json  m2_ingest.json  m3_index.json  m4_retrieve.json  m5_tools.json  m6_agent.json  m7_orchestrator.json  m8_llm_router.json  m9_memory.json
docs/: architecture.md  runbook.md  security_compliance.md
src/adapters/db/: client.py
src/adapters/llm/: client.py
src/adapters/storage/: client.py
src/adapters/vectorstore/: client.py
src/adapters/vlm/: client.py
src/api/: main.py  middleware_audit.py  routes_admin.py  routes_agent.py
src/core/: errors.py  fake_data.py  logging.py  schema_validation.py  tracing.py
src/jobs/: batch_ingest.py  offline_eval.py  rebuild_index.py
src/modules/m10_eval/: service.py
src/modules/m1_authz/: service.py
src/modules/m2_ingest/: service.py
src/modules/m3_index/: service.py
src/modules/m4_retrieve/: service.py
src/modules/m5_tools/: service.py
src/modules/m6_agent/: service.py
src/modules/m7_orchestrator/: service.py
src/modules/m8_llm_router/: service.py
src/modules/m9_memory/: service.py
tests/contract/: test_contracts.py
