0) 依赖与启动文件
pyproject.toml


[tool.uvicorn]
factory = false
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-med-agent"
version = "0.1.0"
description = "Enterprise Med Agent Platform (MVP stub)"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "jsonschema>=4.21",
  "pyyaml>=6.0",
  "pydantic>=2.6",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
